--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.6",
     "@mui/material-next": "^6.0.0-alpha.126",
     "@reduxjs/toolkit": "^2.3.0",
+    "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.3.0",
